Python/Day1_Lab.txt
>>> print("Hello, World!")
Hello, World!
>>> print("Hello", "World!")
Hello World!
>>> print("Hello" + "World!")
HelloWorld!
>>> print("Hello", "\t", "World!")
Hello 	 World!
>>> print(3)
3
>>> print(3.0)
3.0
>>> print(2+3)
5
>>> print(2.0+3.0)
5.0
>>> print("2"+"3")
23
>>> print("2+3=",2+3)
2+3= 5
>>> print(2*3)
6
>>> print(2**3)
8
>>> print(2/3)
0.6666666666666666
>>> 


############## Math Problem with average speed ###############

>>> print ("10Km = "10/1.61)
  File "<stdin>", line 1
    print ("10Km = "10/1.61)
                     ^
SyntaxError: invalid syntax
>>> print ("10Km = ",10/1.61,"miles")
('10Km = ', 6.211180124223602, 'miles')

>>> print("Average miles time is",43.5/6.2)
('Average miles time is', 7.016129032258064)

>>> print("average miles per hour is",60/7)
('average miles per hour is', 8)

>>> print("average miles per hour is",60/7.0161)
('average miles per hour is', 8.55175952452217)
